--- a/vue/src/assets/styles/main.css
+++ b/vue/src/assets/styles/main.css
@@ -18,6 +18,25 @@
   max-height: 120px;
   object-fit: cover;
 }
+
+:where(.css-dev-only-do-not-override-19iuou).ant-select-single.ant-select-lg .ant-select-selector {
+  font-size: 15px;
+}
+:where(.css-dev-only-do-not-override-19iuou).ant-input-affix-wrapper-lg {
+  font-size: 15px;
+}
+
+:where(.css-dev-only-do-not-override-19iuou).ant-select-multiple.ant-select-lg {
+  font-size: 15px;
+}
+
+:where(.css-dev-only-do-not-override-19iuou).ant-input-number-lg {
+  font-size: 15px;
+}
+
+:where(.css-dev-only-do-not-override-19iuou).ant-picker-large .ant-picker-input > input {
+  font-size: 15px;
+}
 /* Switch */
 /* The switch - the box around the slider */
 .switch {
