--- a/nuxt/assets/css/custom.css
+++ b/nuxt/assets/css/custom.css
@@ -223,3 +223,138 @@
 .Toastify__toast-container .Toastify__close-button {
   display: none;
 }
+
+/* Voucher */
+
+.ec-offer-coupon .code {
+  background-color: #ecfdf5;
+  color: #059669;
+  text-align: center;
+  padding: 16px 40px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  border-radius: 10px;
+  margin: 12px 0;
+  border: 1px dashed #64ccab;
+}
+
+.coupon-area {
+  padding: 50px 0;
+  /* min-height: 100vh; */
+}
+.coupon-area .coupon {
+  background-color: #fff;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border: 1px solid #f5f5f5;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  min-height: 250px;
+}
+.coupon-area .coupon .coupon-left {
+  flex: 2;
+  display: flex;
+  align-items: center;
+  padding: 18px;
+}
+.coupon-area .coupon .coupon-left .thumb {
+  margin-right: 20px;
+}
+.coupon-area .coupon .coupon-left .thumb img {
+  width: 140px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center center;
+  object-position: center center;
+  border-radius: 10px;
+}
+.coupon-area .coupon .coupon-left .content .expired {
+  font-size: 13px;
+}
+.coupon-area .coupon .coupon-left .content .expired span {
+  font-weight: 600;
+}
+.coupon-area .coupon .coupon-left .content .title-coupon {
+  font-size: 17px;
+  margin: 4px 0;
+  color: #292930;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 22px;
+}
+.coupon-area .coupon .coupon-left .content .value {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 0;
+  color: #ff0003;
+}
+.coupon-area .coupon .coupon-right {
+  flex: 1;
+  position: relative;
+  border-left: 1px dashed #e9e9e9;
+  padding: 24px;
+}
+.coupon-area .coupon .coupon-right::before,
+.coupon-area .coupon .coupon-right::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  background: #fff;
+  border-radius: 100%;
+  border: 1px solid #f5f5f5;
+}
+.coupon-area .coupon .coupon-right::before {
+  top: -6px;
+  left: -13px;
+  border-top-color: transparent;
+}
+.coupon-area .coupon .coupon-right::after {
+  bottom: -6px;
+  left: -13px;
+  border-bottom-color: transparent;
+}
+.coupon-area .coupon .coupon-right .status {
+  font-size: 16px;
+}
+.coupon-area .coupon .coupon-right .status span {
+  font-weight: 600;
+}
+.coupon-area .coupon .coupon-right .status span.active {
+  color: #3eb75e;
+}
+.coupon-area .coupon .coupon-right .status span.inactive {
+  color: #ff0003;
+}
+.coupon-area .coupon .coupon-right .code {
+  background-color: #ecfdf5;
+  color: #059669;
+  text-align: center;
+  padding: 16px 10px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  border-radius: 10px;
+  margin: 12px 0;
+  border: 1px dashed #64ccab;
+  transition: all 0.2s ease-in-out;
+}
+.coupon-area .coupon .coupon-right .code:hover{
+  cursor: pointer;
+  background-color: #059669;
+  color: #fff;
+  border: 1px dashed #059669;
+
+}
+
+.coupon-area .coupon .coupon-right .condition {
+  font-size: 12px;
+  margin-bottom: 0;
+}
+.coupon-area .coupon .coupon-right .condition span {
+  font-weight: 600;
+  color: var(--color-heading);
+}
