--- a/nuxt/assets/css/custom.css
+++ b/nuxt/assets/css/custom.css
@@ -418,6 +418,11 @@
   border-bottom-color: transparent;
 }
 
+.checkout-content-wrapper .card-container.error {
+  border: 1px solid #f00;
+  box-shadow: 0 0 4px 0 #f00;
+}
+
 .checkout-content-wrapper .checked-icon {
   position: absolute;
   top: 13px;
