--- a/nuxt/assets/css/custom.css
+++ b/nuxt/assets/css/custom.css
@@ -1,3 +1,145 @@
+@keyframes shake {
+  0%,
+  100% {
+    transform: rotate(0);
+    color: black;
+  }
+  25% {
+    transform: rotate(-15deg);
+    color: red;
+  }
+  50% {
+    transform: rotate(15deg);
+    color: blue;
+  }
+  75% {
+    transform: rotate(-15deg);
+    color: green;
+  }
+}
+
+.shake {
+  animation: shake 1s infinite;
+  transition: all 0.1s ease-in-out;
+  transform-origin: top center; /* Điểm gốc lắc ở dưới */
+}
+/* App header */
+.header-notification {
+  position: relative;
+}
+.header-notification::after {
+  content: '';
+  position: absolute;
+  top: 18px;
+  right: 0;
+  width: 200px;
+  height: 20px;
+  background-color: transparent;
+  display: block;
+}
+
+.noti-dropdown-box {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: left;
+  width: 400px;
+  position: absolute;
+  top: 25px;
+  right: -11px;
+  z-index: 999;
+  opacity: 0;
+  overflow: hidden;
+  transition:
+    opacity 0.2s ease,
+    transform 0.3s ease;
+  transform: translateY(-10px);
+}
+
+.header-notification:hover .noti-dropdown-box {
+  opacity: 1;
+  transform: translateY(0);
+}
+.noti-dropdown-box h6 {
+  font-size: 15px;
+  font-weight: normal;
+  margin-bottom: 0;
+  border-bottom: 1px solid #e5e5e5;
+  padding: 12px 20px;
+  color: #555555;
+  text-transform: capitalize;
+}
+.noti-dropdown-box ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.noti-dropdown-box ul li {
+  margin-bottom: 1px;
+  font-size: 14px;
+  font-weight: normal;
+  color: #444444;
+  display: flex;
+  border-bottom: 1px solid #f7f8f9;
+  padding: 12px 20px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+.noti-dropdown-box ul li:last-child {
+  border-bottom: none;
+}
+.noti-dropdown-box .noti-image {
+  width: 50px ;
+  height: 50px;
+}
+.noti-dropdown-box .noti-content {
+  width: 100%;
+}
+
+.noti-dropdown-box ul li.active {
+  background-color: #f9feff;
+}
+
+.noti-dropdown-box ul li:hover {
+  background-color: #f6f7f8;
+  color: #222222;
+  transition: all 0.3s ease-in-out;
+}
+.noti-dropdown-box .noti-title {
+  font-weight: normal;
+  margin-bottom: 0;
+  color: #222222;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
+}
+.noti-dropdown-box .noti-image {
+  flex: 1;
+  margin-right: 10px;
+}
+.noti-dropdown-box .noti-desc {
+  margin-bottom: 0;
+  font-size: 12px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
+}
+.btn-all {
+  border-top: 1px solid #e5e5e5;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.btn-all:hover {
+  color: #222222;
+}
+
 /* Slider */
 .button-slide {
   background-color: #fff;
@@ -776,5 +918,5 @@
 
 /* V-field */
 .v-text-field .v-input__details .v-messages__message {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
