--- a/nuxt/assets/css/custom.css
+++ b/nuxt/assets/css/custom.css
@@ -48,6 +48,7 @@
   top: 25px;
   right: -11px;
   z-index: 999;
+  visibility: hidden;
   opacity: 0;
   overflow: hidden;
   transition:
@@ -58,6 +59,7 @@
 
 .header-notification:hover .noti-dropdown-box {
   opacity: 1;
+  visibility: visible;
   transform: translateY(0);
 }
 .noti-dropdown-box h6 {
@@ -89,7 +91,7 @@
   border-bottom: none;
 }
 .noti-dropdown-box .noti-image {
-  width: 50px ;
+  width: 50px;
   height: 50px;
 }
 .noti-dropdown-box .noti-content {
