--- a/vue/src/assets/styles/main.css
+++ b/vue/src/assets/styles/main.css
@@ -301,3 +301,71 @@
   min-height: 200px;
   max-height: 1000px !important;
 }
+
+/* Chat  */
+
+.chat-container-wrapper .chat-container {
+  height: calc(100vh - 150px);
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+.chat-container-wrapper {
+  height: 98%;
+}
+.chat-container-wrapper .chat-item {
+  transition: background-color 0.3s;
+}
+
+.chat-container-wrapper .chat-item:hover {
+  background-color: #f1f5f9;
+}
+.chat-container-wrapper .chat-item.selected {
+  background-color: #f1f5f9;
+}
+.chat-container-wrapper .scrollable {
+  max-height: calc(100vh - 150px);
+  overflow-y: auto;
+}
+
+.chat-container-wrapper .header-title {
+  font-size: 0.9375rem;
+  font-weight: 600;
+}
+
+.chat-container-wrapper .header-meta {
+  color: #6c757d;
+  font-weight: normal;
+  font-size: 0.8125rem;
+}
+
+.chat-container-wrapper .message-input {
+  flex: 1;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 0.375rem 0 0 0.375rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s;
+}
+.chat-container-wrapper .message-input:focus {
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+  outline: none;
+}
+
+.chat-container-wrapper .status-indicator,
+.chat-container-wrapper .status-indicator-1 {
+  position: absolute;
+  bottom: 0;
+  right: 13px;
+  width: 10px; /* Kích thước của chấm tròn */
+  height: 10px; /* Kích thước của chấm tròn */
+  border-radius: 50%; /* Tạo hình tròn */
+}
+
+.chat-container-wrapper .status-indicator.active {
+  background-color: #28a745; /* Màu xanh cho online */
+}
+
+.chat-container-wrapper .status-indicator-1.active {
+  background-color: #ffc107; /* Màu vàng cho offline */
+}
