--- a/nuxt/assets/css/custom.css
+++ b/nuxt/assets/css/custom.css
@@ -922,3 +922,85 @@
 .v-text-field .v-input__details .v-messages__message {
   margin-bottom: 8px;
 }
+
+/* Chat */
+
+.chat-section .row {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.chat-section .sidebar-chat {
+  border-right: 1px solid #f5f6f7;
+}
+
+.chat-section .sidebar-chat .chat-wrap .chat-list {
+  list-style: none;
+  padding-left: 0;
+}
+.chat-section .sidebar-chat .chat-wrap .chat-item {
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.1s linear;
+}
+.chat-section .sidebar-chat .chat-wrap .chat-item:hover {
+  background-color: #f6f7f8;
+}
+.chat-section .sidebar-chat .chat-wrap .chat-item.selected {
+  background-color: #f6f7f8;
+}
+.chat-section .card-wrap {
+  height: 740px;
+  border-radius: 6px;
+  position: relative;
+}
+.chat-section .card {
+  border-radius: 6px;
+  padding: 30px 20px;
+  overflow: auto;
+  height: 600px;
+}
+.chat-section .card .card-body {
+  padding: 0;
+  height: 100%;
+}
+
+.chat-section .bg-body-tertiary {
+  background-color: #f8f9fa;
+}
+.chat-section .header-title {
+  font-size: 18px;
+}
+.chat-section .card-header {
+  padding: 16px 20px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #f5f6f7;
+}
+.chat-section .card-footer {
+  position: absolute;
+  width: 100%;
+  padding: 0 20px;
+  padding-top: 16px;
+  /* border-top: 1px solid #f5f6f7; */
+  bottom: 16px;
+  left: 0;
+}
+
+.chat-section .card-footer .form-control {
+  margin: 0px 15px;
+  border-radius: 4px;
+}
+.chat-section .text-item {
+  margin-bottom: 10px;
+  padding: 12px 16px;
+  border-radius: 6px;
+  margin-left: 10px;
+  color: #222;
+  font-size: 13px;
+}
+.chat-section .message-inner {
+  margin-bottom: 10px;
+}
+.chat-section .text-item.sender {
+  margin-left: auto;
+}
