--- a/vue/src/assets/styles/main.css
+++ b/vue/src/assets/styles/main.css
@@ -14,7 +14,8 @@
 
 /* Ant custom css */
 .ant-card {
-  border-color: #0420451a;
+  /* border-color: #0420451a; */
+  box-shadow: 0 1px 1px rgba(56, 65, 74, 0.15);
 }
 :where(.css-dev-only-do-not-override-17yhhjv).ant-card .ant-card-head-title {
   text-transform: capitalize;
@@ -31,6 +32,15 @@
 :where(.css-dev-only-do-not-override-17yhhjv).ant-dropdown-menu-submenu .ant-dropdown-menu {
   border-radius: 4px;
 }
+
+:where(.css-dev-only-do-not-override-17yhhjv).ant-table-wrapper .ant-table {
+  box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
+}
+
+/* :where(.css-dev-only-do-not-override-17yhhjv).ant-menu-dark {
+  color: rgba(255, 255, 255, 0.65);
+  background: #001529;
+} */
 
 .anticon svg {
   display: block !important;
@@ -109,6 +119,10 @@
   border-radius: 4px;
 }
 
+/* Header */
+.header-wrap .input-search input {
+  background-color: #f3f3f9 !important;
+}
 /* Switch */
 /* The switch - the box around the slider */
 .switch {
